--- a/workshop.css
+++ b/workshop.css
@@ -118,13 +118,11 @@ textarea { overflow: auto; }
 /** Don't inherit the `font-weight` (applied by a rule above). NOTE: the default cannot safely be changed in Chrome and Safari on OS X. */
 optgroup { font-weight: bold; }
 
-/* Tables ========================================================================== */
 /** Remove most spacing between table cells. */
 table { border-collapse: collapse; border-spacing: 0; }
 
 td, th { padding: 0; }
 
-/* =========================================================== Layout =========================================================== */
 html { box-sizing: border-box; }
 
 *, *:before, *:after { box-sizing: inherit; }
@@ -132,14 +130,10 @@ html { box-sizing: border-box; }
 html { font: 300 100%/1.5 "Lato", sans-serif; text-rendering: optimizeLegibility; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
 @media (min-width: 720px) { html { font-size: 120%; } }
 
-body { background: #8d7984; color: #fff; } 
+body { background: #8d7984; color: #fff; }
 
 section { border-bottom: 3px solid #72616a; }
 section:last-of-type { border: 0; }
-
-.section--alt { background: #263238; box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.3); color: #819ca9; }
-
-.section--example { background: #3e5059; border: 0; text-align: left; }
 
 .row { margin-bottom: 2rem; }
 .row:last-of-type { margin-bottom: 0; }
@@ -152,7 +146,6 @@ section:last-of-type { border: 0; }
 .container { margin: 0 auto; padding: 2rem 0; width: 95%; }
 @media (min-width: 720px) { .container { max-width: 860px; } }
 
-/* =========================================================== Typography =========================================================== */
 h1, h2, h3, h4 { font: 700 100%/1.3 "Roboto", sans-serif; margin-top: 0; margin-bottom: .5rem; }
 
 h1 { font-size: 1.8rem; letter-spacing: 2px; margin-bottom: 1rem; text-transform: uppercase; }
@@ -164,29 +157,19 @@ h3 { font-size: .9rem; font-weight: 700; text-transform: none; }
 h4 { font-size: .8rem; text-transform: uppercase; }
 
 p, ul { margin: 0 0 1rem; }
-p:last-of-type, ul:last-of-type { margin-bottom: 0; }
 
-.section__title { background: #37474f; border-radius: 3px; display: inline-block; letter-spacing: 1px; margin: 0 auto 1.5rem; padding: .5rem 1rem; }
-
-.section__header { font-weight: 700; text-align: left; }
-
-.section--example h2 { font: 300 100%/1.5 "Lato", sans-serif; font-size: 1.5rem; margin: 0; }
-
-/* Links =========================================================== */
 a { color: inherit; text-decoration: underline; }
 
-/*  Code =========================================================== */
 code { background: #353f44; border-radius: 3px; font-family: Consolas, "Liberation Mono", Courier, monospace; font-size: .9rem; padding: .1rem .2rem; }
 
-/*  Header =========================================================== */
 header { background: #72616a; color: #fff; text-align: left; }
 
 header .container { padding: 2rem 0; }
 
-/* Project =========================================================== */
-.example-box { background: #353f44; border-radius: 3px; overflow: hidden; padding: 1rem 0; position: relative; }
+.example-box { background: #353f44; border-radius: 3px; overflow: hidden; padding: 1.1rem; position: relative; }
 
 .clean-code-tip { color: #f6e164; }
+
 .note { font-size: .8rem }
 
 /* Utilities =========================================================== */
