--- a/workshop.css
+++ b/workshop.css
@@ -160,13 +160,14 @@ p, ul { margin: 0 0 1rem; }
 
 a { color: inherit; text-decoration: underline; }
 
-code { background: #353f44; border-radius: 3px; font-family: Consolas, "Liberation Mono", Courier, monospace; font-size: .9rem; padding: .1rem .2rem; }
+code { background: #fff; border-radius: 3px; font-family: Consolas, "Liberation Mono", Courier, monospace; font-size: .9rem; padding: .1rem .2rem; }
 
 header { background: #72616a; color: #fff; text-align: left; }
 
 header .container { padding: 2rem 0; }
 
-.example-box { background: #353f44; border-radius: 3px; overflow: hidden; padding: 1.1rem; position: relative; }
+.example-box { background: #fff; border-radius: 3px; overflow: hidden; padding: 1.1rem; position: relative; }
+.example-box-drk { background: #353f44; border-radius: 3px; overflow: hidden; padding: 1.1rem; position: relative; }
 
 .clean-code-tip { color: #f6e164; }
 
