--- a/workshop.css
+++ b/workshop.css
@@ -160,7 +160,7 @@ p, ul { margin: 0 0 1rem; }
 
 a { color: inherit; text-decoration: underline; }
 
-code { background: #fff; border-radius: 3px; font-family: Consolas, "Liberation Mono", Courier, monospace; font-size: .9rem; padding: .1rem .2rem; }
+code { color: #333; background: #fff; border-radius: 3px; font-family: Consolas, "Liberation Mono", Courier, monospace; font-size: .9rem; padding: .1rem .2rem; }
 
 header { background: #72616a; color: #fff; text-align: left; }
 
