--- a/shapes.css
+++ b/shapes.css
@@ -1,11 +1,10 @@
-body {
-  background: #fff;
-  color: #333;
-  font-family: "Arial", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  padding: 0;
-  margin: 0;
+
+h1{
+
+}
+
+h2{
+  
 }
 
 ul {
