--- a/shapes.css
+++ b/shapes.css
@@ -13,8 +13,14 @@ ul {
   padding: 2px;
 }
 
+li {
+  /*float: left;*/
+  /*display: inline;*/
+}
+
 li a {
   display: block;
+/*display: block-inline;*/
   color: #000;
 /*padding: 8px 0 8px 16px;*/  
 /*text-decoration: none;*/
