--- a/shapes.css
+++ b/shapes.css
@@ -1,10 +1,20 @@
-
-h1{
-
+body {
+  background: #fff;
+  color: #333;
+  font-family: "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  padding: 0;
+  margin: 0;
 }
 
-h2{
-  
+h1 {
+  margin: 0;
+}
+
+h2 {
+  color: #555;
+  margin: 0;
 }
 
 ul {
