--- a/shapes.css
+++ b/shapes.css
@@ -26,11 +26,11 @@ ul {
 li {
   /*float: left;*/
   /*display: inline;*/
+  padding: 1px;
 }
 
 li a {
   display: block;
-/*display: block-inline;*/
   color: #000;
 /*padding: 8px 0 8px 16px;*/  
 /*text-decoration: none;*/
