--- a/shapes.css
+++ b/shapes.css
@@ -32,7 +32,7 @@ li {
 li a {
   display: block;
   color: #000;
-/*padding: 8px 0 8px 16px;*/  
+/*padding: 8px 0 8px 16px;*/
 /*text-decoration: none;*/
 }
 
@@ -54,6 +54,10 @@ li a:hover:not(.active) {
 
 .shapes {}
 
+.cat {
+ background-image: url("cat.jpeg");
+}
+
 .circle {
   background: #f6e164;
   border-radius: 100%;
@@ -72,8 +76,8 @@ li a:hover:not(.active) {
 }
 
 .triangle{
-  width: 0; 
-  height: 0; 
+  width: 0;
+  height: 0;
   border-top: 60px solid transparent;
   border-bottom: 60px solid transparent;
   border-left: 60px solid green;
@@ -81,10 +85,10 @@ li a:hover:not(.active) {
 }
 
 .triangle-left {
-  width: 0; 
-  height: 0; 
+  width: 0;
+  height: 0;
   border-top: 5px solid transparent;
-  border-bottom: 5px solid transparent;  
+  border-bottom: 5px solid transparent;
   border-right: 5px solid #2f2f2f;
 }
 
